# tsp-distributed-worker

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  config.json
cmake/: googletest-download.cmake
docs/: bnb-reverse-engineering.txt  server-process-example.txt  worker-process-example.txt
src/: CMakeLists.txt  main.cpp
src/graphs/: GraphParser.cpp  GraphParser.h  GraphRepresentation.cpp  GraphRepresentation.h  SymmetricMatrix.cpp  SymmetricMatrix.h
src/proto/: message.proto
src/solvers/: Solution.cpp  Solution.h  Solver.cpp  Solver.h
src/solvers/bnb/: BranchAndBound.cpp  BranchAndBound.h  LittleMatrix.cpp  LittleMatrix.h
src/solvers/bruteforce/: BruteForce.cpp  BruteForce.h  BruteForceTaskSolver.cpp  BruteForceTaskSolver.h
src/worker/: ConfigurationProvider.cpp  ConfigurationProvider.h  Worker.cpp  Worker.h
test/: CMakeLists.txt  HelloTests.cpp
test/graphs/: AdjacencyMatrixTests.cpp
test/solvers/bnb/: BranchAndBoundTests.cpp  LittleMatrixTests.cpp
test/tests/: CMakeLists.txt
test/tests/graphs/: AdjacencyMatrixTests.cpp
